--- a/config-AX18-sdf8057.cfg
+++ b/config-AX18-sdf8057.cfg
@@ -36,6 +36,7 @@ CONFIG_TARGET_OPTIMIZATION="-O2 -pipe -march=armv8-a+crypto+crc -mcpu=cortex-a53
 CONFIG_TARGET_OPTIONS=y
 CONFIG_TARGET_SQUASHFS_BLOCK_SIZE=4
 CONFIG_TOOLCHAINOPTS=y
+CONFIG_USE_LTO=y
 CONFIG_ZLIB_OPTIMIZE_SPEED=y
 CONFIG_ZSTD_OPTIMIZE_O3=y
 
